samples/zig/src/m_pd.zig

pub extern fn dsp_add_zero(out: *pd.Sample, n: c_int) void;
pub extern fn sys_getblksize() c_int;
pub extern fn sys_getsr() pd.Float;
pub extern fn sys_get_inchannels() c_int;
pub extern fn sys_get_outchannels() c_int;
pub extern fn dsp_add(f: pd.PerfRoutine, n: c_int, ...) void;
pub extern fn dsp_addv(f: pd.PerfRoutine, n: c_int, vec: [*]pd.Int) void;
pub extern fn pd_fft(buf: *pd.Float, npoints: c_int, inverse: c_int) void;
pub extern fn ilog2(n: c_int) c_int;
pub extern fn mayer_fht(fz: *pd.Sample, n: c_int) void;
pub extern fn mayer_fft(n: c_int, real: *pd.Sample, imag: *pd.Sample) void;
pub extern fn mayer_ifft(n: c_int, real: *pd.Sample, imag: *pd.Sample) void;
pub extern fn mayer_realfft(n: c_int, real: *pd.Sample) void;
pub extern fn mayer_realifft(n: c_int, real: *pd.Sample) void;
pub extern var cos_table: [*c]f32;
pub extern fn canvas_suspend_dsp() c_int;
pub extern fn canvas_resume_dsp(oldstate: c_int) void;
pub extern fn canvas_update_dsp() void;
pub extern var canvas_dspstate: c_int;
pub const struct__resample = extern struct {
    method: c_int = @import("std").mem.zeroes(c_int),
    downsample: c_int = @import("std").mem.zeroes(c_int),
    upsample: c_int = @import("std").mem.zeroes(c_int),
    s_vec: [*c]t_sample = @import("std").mem.zeroes([*c]t_sample),
    s_n: c_int = @import("std").mem.zeroes(c_int),
    coeffs: [*c]t_sample = @import("std").mem.zeroes([*c]t_sample),
    coefsize: c_int = @import("std").mem.zeroes(c_int),
    buffer: [*c]t_sample = @import("std").mem.zeroes([*c]t_sample),
    bufsize: c_int = @import("std").mem.zeroes(c_int),
};
pub const t_resample = pd.Resample;
pub extern fn resample_init(x: *pd.Resample) void;
pub extern fn resample_free(x: *pd.Resample) void;
pub extern fn resample_dsp(x: *pd.Resample, in: *pd.Sample, insize: c_int, out: *pd.Sample, outsize: c_int, method: c_int) void;
pub extern fn resamplefrom_dsp(x: *pd.Resample, in: *pd.Sample, insize: c_int, outsize: c_int, method: c_int) void;
pub extern fn resampleto_dsp(x: *pd.Resample, out: *pd.Sample, insize: c_int, outsize: c_int, method: c_int) void;
pub extern fn mtof(t_float) pd.Float;
pub extern fn ftom(t_float) pd.Float;
pub extern fn rmstodb(t_float) pd.Float;
pub extern fn powtodb(t_float) pd.Float;
pub extern fn dbtorms(t_float) pd.Float;
pub extern fn dbtopow(t_float) pd.Float;
pub extern fn q8_sqrt(t_float) pd.Float;
pub extern fn q8_rsqrt(t_float) pd.Float;
pub extern fn qsqrt(t_float) pd.Float;
pub extern fn qrsqrt(t_float) pd.Float;
pub const struct__garray = opaque {};
pub extern var garray_class: ?*struct__class;
pub extern fn garray_getfloatarray(x: *pd.GArray, size: *c_int, vec: *[*]pd.Float) c_int;
pub extern fn garray_getfloatwords(x: *pd.GArray, size: *c_int, vec: *[*]pd.Word) c_int;
pub extern fn garray_redraw(x: *pd.GArray) void;
pub extern fn garray_npoints(x: *pd.GArray) c_int;
pub extern fn garray_vec(x: *pd.GArray) [*c]u8;
pub extern fn garray_resize(x: *pd.GArray, f: pd.Float) void;
pub extern fn garray_resize_long(x: *pd.GArray, n: c_long) void;
pub extern fn garray_usedindsp(x: *pd.GArray) void;
pub extern fn garray_setsaveit(x: *pd.GArray, saveit: c_int) void;
pub extern fn garray_getglist(x: *pd.GArray) ?*pd.GList;
pub extern fn garray_getarray(x: *pd.GArray) ?*pd.Array;
pub extern var scalar_class: ?*struct__class;
pub extern fn value_get(s: *pd.Symbol) [*c]pd.Float;
pub extern fn value_release(s: *pd.Symbol) void;
pub extern fn value_getfloat(s: *pd.Symbol, f: *pd.Float) c_int;
pub extern fn value_setfloat(s: *pd.Symbol, f: pd.Float) c_int;
pub const t_guicallbackfn = ?*const fn ([*c]pd.GObj, ?*pd.GList) callconv(.C) void;
pub extern fn sys_vgui(fmt: [*:0]const u8, ...) void;
pub extern fn sys_gui(s: [*:0]const u8) void;
pub extern fn sys_pretendguibytes(n: c_int) void;
pub extern fn sys_queuegui(client: *anyopaque, glist: *pd.GList, f: pd.Guicallbackfn) void;
pub extern fn sys_unqueuegui(client: *anyopaque) void;
pub extern fn gfxstub_new(owner: *pd.Pd, key: *anyopaque, cmd: [*:0]const u8) void;
pub extern fn gfxstub_deleteforkey(key: *anyopaque) void;
pub extern fn pdgui_vmess(destination: [*:0]const u8, fmt: [*:0]const u8, ...) void;
pub extern fn pdgui_stub_vnew(owner: *pd.Pd, destination: [*:0]const u8, key: *anyopaque, fmt: [*:0]const u8, ...) void;
pub extern fn pdgui_stub_deleteforkey(key: *anyopaque) void;
pub extern var glob_pdobject: ?*struct__class;
pub const t_externclass = ?*struct__class;
pub extern fn c_extern(cls: *pd.Externclass, newroutine: pd.NewMethod, freeroutine: pd.Method, name: *pd.Symbol, size: usize, tiny: c_int, arg1: t_atomtype, ...) void;
pub extern fn c_addmess(@"fn": pd.Method, sel: *pd.Symbol, arg1: t_atomtype, ...) void;
pub const t_bigorsmall32 = extern union {
    f: t_float,
    ui: c_uint,
};
pub fn PD_BADFLOAT(arg_f: t_float) callconv(.C) c_int {
    var f = arg_f;
    _ = &f;
    var pun: t_bigorsmall32 = undefined;
    _ = &pun;
    pun.f = f;
    pun.ui &= @as(c_uint, @bitCast(@as(c_int, 2139095040)));
    return @intFromBool(pun.ui == @as(c_uint, @bitCast(@as(c_int, 0)))) | @intFromBool(pun.ui == @as(c_uint, @bitCast(@as(c_int, 2139095040))));
}
pub fn PD_BIGORSMALL(arg_f: t_float) callconv(.C) c_int {
    var f = arg_f;
    _ = &f;
    var pun: t_bigorsmall32 = undefined;
    _ = &pun;
    pun.f = f;
    return @intFromBool((pun.ui & @as(c_uint, @bitCast(@as(c_int, 536870912)))) == ((pun.ui >> @intCast(1)) & @as(c_uint, @bitCast(@as(c_int, 536870912)))));
}
